<resources>
    <string name="app_name">TaskBeats</string>
    <string name="home_title">Task Beat</string>
    <string name="create_task_title">Create Task</string>
    <string name="update_task_title">Update Task</string>
    <string name="update">Update</string>
    <string name="create">Create</string>
    <string name="criar">Criar</string>
    <string name="category_delete_title">Important</string>
    <string name="category_delete_description">By deleting a category you will delete all tasks with  this category, are you sure?</string>
    <string name="delete">Delete</string>
    <string name="empty_category_title">No category found</string>
    <string name="empty_category_description"> please create new one</string>
    <string name="create_task">Create Task</string>
    <string name="create_btn">Create</string>
    <string name="delete_btn">Delete</string>
    <string name="hint_bottom_sheet_task">E.g: Work</string>
    <string name="add_category">Add Category</string>
</resources>