<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        tools:text="@string/category_delete_title"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/tv_info_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        tools:text="@string/category_delete_description"
        />

    <Button
        android:id="@+id/btn_info"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"/>



</LinearLayout>