<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_category"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_bottom_sheet_task"
            android:minHeight="48dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_category"
        android:text="@string/create_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:layout_margin="16dp"/>

</LinearLayout>