<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_create_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_task"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/categoryList_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_bottom_sheet_task"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="16dp"
        android:gravity="center">

        <Button
            android:layout_weight="1"
            android:id="@+id/btn_create_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_btn"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:layout_marginEnd="4dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:id="@+id/btn_delete_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:text="@string/delete_btn" />

    </LinearLayout>



</LinearLayout>